# lean_niche

./: .cursorrules  .env.example  .gitignore  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  LICENSE  LeanNiche.lean  Main.lean  Makefile  README.md  comprehensive_lean_integration_demo.py  final_lean_test.lean  final_lean_verification.lean  final_proof_verification.lean  lake-manifest.json  lakefile.toml  main.py  minimal_lean_test.lean  proof_report.lean  proof_verification_test.lean  pyproject.toml  pytest.ini  setup.sh  test_lean_computations.lean  tmp_check_import.lean  tmp_check_import2.lean  working_lean_test.lean
.github/workflows/: ci.yml  lean-dashboard.yml  lean-health-monitor.yml  lean-realness-check.yml  lean-verification-summary.yml  lean-verification.yml  lean_action_ci.yml  scheduled-lean-verification.yml
demo_outputs/: demonstration_summary.md
docs/: ProofGuide.md  api-reference.md  architecture.md  code_metrics.md  contributing.md  deployment.md  development.md  examples.md  index.md  lean-in-leanniche.md  lean-overview.md  mathematical-foundations.md  performance.md  research-applications.md  troubleshooting.md
examples/: AdvancedExamples.lean  BasicExamples.lean  README.md  __init__.py  control_theory_example.py  dynamical_systems_example.py  integration_showcase_example.py  run_all_examples.py  statistical_analysis_example.py
outputs/: examples_execution_report.md
outputs/control_theory/proofs/: control_theory.lean
outputs/control_theory/reports/: comprehensive_report.md
outputs/dynamical_systems/proofs/: dynamical_systems_theory.lean
outputs/dynamical_systems/reports/: comprehensive_report.md
outputs/integration_showcase/proofs/: integrated_artifacts.lean  integrated_showcase.lean
outputs/integration_showcase/reports/: comprehensive_report.md
outputs/statistical_analysis/proofs/: statistical_analysis_comprehensive.lean
python/: __init__.py
scripts/: analyze.sh  build.sh  docs.sh  test.sh  verify_lean_proofs.py  verify_setup.py
src/: Main.lean  README.md  __init__.py
src/LeanNiche/: Advanced.lean  Basic.lean  Computational.lean  SetTheory.lean  Tactics.lean
src/latex/: __init__.py  lean_to_latex.py
src/lean/: LeanNiche.lean  Main.lean
src/lean/LeanNiche/: Advanced.lean  Basic.lean  BasicAdvanced.lean  BasicLinearAlgebra.lean  Computational.lean  ComputationalTests.lean  ControlTheory.lean  DynamicalSystems.lean  LeanNiche.lean  LeanNicheMain.lean  LinearAlgebra.lean  Lyapunov.lean  Main.lean  ProofExport.lean  SetTheory.lean  Setup.lean  Statistics.lean  Tactics.lean  Utils.lean  (+3 more)
src/python/: __init__.py  cli.py  lean_runner.py  orchestrator_base.py  visualization.py
src/tests/: README.md  run_comprehensive_lean_tests.py  run_tests.py  simple_test_runner.py
tests/: TestSuite.lean
tmp_control_out/reports/: comprehensive_report.md
tmp_control_out2/proofs/: control_theory_comprehensive.lean
tmp_control_out2/reports/: comprehensive_report.md
tmp_debug_artifacts/reports/: comprehensive_report.md
tmp_debug_control/reports/: comprehensive_report.md
tmp_debug_control2/reports/: comprehensive_report.md
tmp_debug_final/reports/: comprehensive_report.md
tmp_final_debug/reports/: comprehensive_report.md
tmp_inspect_control/reports/: comprehensive_report.md
tmp_local_test/proofs/: control_theory_artifacts.lean
(+68 files in other folders)
