[project]
name = "lean-niche"
version = "0.1.0"
description = "Python utilities for LeanNiche mathematical research environment"
readme = "README.md"
authors = [
    {name = "LeanNiche Team"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
]
requires-python = ">=3.8"
keywords = ["mathematics", "research", "lean", "dynamical-systems", "visualization"]
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "sympy>=1.12.0",
    "networkx>=3.1.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "nbconvert>=7.0.0",
    "ipywidgets>=8.0.0",
    "plotly-express>=0.4.1",
    "kaleido>=0.2.1",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[project.scripts]
lean-niche = "src.python.cli:main"
lean-niche-viz = "src.python.cli:gallery"

[project.urls]
Homepage = "https://github.com/trim/lean_niche"
Repository = "https://github.com/trim/lean_niche.git"
Documentation = "https://github.com/trim/lean_niche/blob/main/README.md"
Issues = "https://github.com/trim/lean_niche/issues"
Changelog = "https://github.com/trim/lean_niche/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-gallery>=0.15.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true